App now stores username in GameModels.Player. Also added profile picture and username views to ProfileActivity.

--- a/MobileTag/Resources/layout/Profile.axml
+++ b/MobileTag/Resources/layout/Profile.axml
@@ -3,5 +3,24 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout1">
+        <ImageView
+            android:src="@android:drawable/ic_menu_gallery"
+            android:layout_width="130.0dp"
+            android:layout_height="130.0dp"
+            android:id="@+id/profilePicImageView"
+            android:layout_marginLeft="15.0dp" />
+        <TextView
+            android:text="[username]"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/profilePicImageView"
+            android:id="@+id/usernameTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_alignBaseline="@id/profilePicImageView" />
+    </RelativeLayout>
 </LinearLayout>
