--- a/MobileTag/Resources/layout/Map.axml
+++ b/MobileTag/Resources/layout/Map.axml
@@ -1,42 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-  <fragment
-      android:id="@+id/map"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:name="com.google.android.gms.maps.MapFragment"
-      android:layout_weight=".80" />
-  <TextView
-      android:id="@+id/textBelowMap"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight=".03"
-      android:background="#22bfb2"
-      android:text="Google Map Demo"
-      android:textColor="#ffffff"
-      android:gravity="center" />
-  <LinearLayout
-      android:orientation="horizontal"
-      android:layout_width="match_parent"
-      android:layout_height="80dp">
-    <Button
-        android:id="@+id/claimButton"
+    android:fitsSystemWindows="true">
+    <LinearLayout
+        android:id="@+id/drawer_layout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minWidth="25px"
+        android:minHeight="25px">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+        <fragment
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_weight=".80" />
+        <TextView
+            android:id="@+id/textBelowMap"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".03"
+            android:background="#22bfb2"
+            android:text="Google Map Demo"
+            android:textColor="#ffffff"
+            android:gravity="center" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
+            <Button
+                android:id="@+id/claimButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight=".50"
+                android:text="Tag"
+                android:clickable="true" />
+            <Button
+                android:id="@+id/clientCameraLocationbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight=".50"
+                android:text="View Me"
+                android:clickable="true" />
+        </LinearLayout>
+    </LinearLayout>
+    <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight=".50"
-        android:text="Tag"
-        android:clickable="true" />
-    <Button
-        android:id="@+id/clientCameraLocationbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight=".50"
-        android:text="View Me"
-        android:clickable="true" />
-  </LinearLayout>
-</LinearLayout>
+        android:layout_gravity="start"
+        android:id="@+id/nav_view"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/nav_menu" />
+</android.support.v4.widget.DrawerLayout>
