--- a/MobileTag/Resources/layout/Toolbar.xml
+++ b/MobileTag/Resources/layout/Toolbar.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/actionBarSize"
-    android:background="?android:attr/colorPrimary"
-    android:theme="@style/ToolbarTheme"/>
+    android:background="@color/primaryColor"
+    android:theme="@style/AppTheme"/>
 
