changed DisplayStatus implementation so layout is unaffected

--- a/MobileTag/Resources/layout/Map.axml
+++ b/MobileTag/Resources/layout/Map.axml
@@ -27,7 +27,7 @@
             android:layout_height="0dp"
             android:layout_weight=".03"
             android:background="@color/primaryColor"
-            android:text="Google Map Demo"
+            android:text=""
             android:textColor="#ffffff"
             android:gravity="center" />
         <LinearLayout
