--- a/MobileTag/Resources/layout/Settings.axml
+++ b/MobileTag/Resources/layout/Settings.axml
@@ -3,5 +3,24 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout1">
+        <CheckBox
+            android:text="Light Map Style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/CheckBox_MapStyleLight" />
+    </LinearLayout>
+    <Button
+        android:text="Save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Save_Button"
+        
+        android:foregroundTint="#fff0ffff" />
 </LinearLayout>
