I added the Image click listener and it works.  Just need to display an image or allow user to choose their image.  I do not know how to store the user choosen image yet.

--- a/MobileTag/Resources/layout/Profile.axml
+++ b/MobileTag/Resources/layout/Profile.axml
@@ -12,7 +12,8 @@
             android:layout_width="130.0dp"
             android:layout_height="130.0dp"
             android:id="@+id/profilePicImageView"
-            android:layout_marginLeft="15.0dp" />
+            android:layout_marginLeft="15.0dp"
+            android:clickable="true" />
         <TextView
             android:text="[username]"
             android:layout_width="wrap_content"
