--- a/MobileTag/Resources/layout/drawer_header.xml
+++ b/MobileTag/Resources/layout/drawer_header.xml
@@ -21,4 +21,13 @@
       android:layout_marginTop="20dp"
       android:textStyle="bold"
       android:text="Username" />
+  <TextView
+      android:id="@+id/confiniumTxt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="@color/primaryLightColor"
+      android:textSize="14sp"
+      android:layout_marginTop="10dp"
+      android:textStyle="bold"
+      android:text="UserConfinium" />
 </LinearLayout>
