--- a/MobileTag/Resources/layout/Profile.axml
+++ b/MobileTag/Resources/layout/Profile.axml
@@ -7,87 +7,88 @@
   android:layout_width="match_parent"                                       
   android:layout_height="match_parent"                                       
   android:fitsSystemWindows="true">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawer_layout"
-        android:minWidth="25px"
-        android:minHeight="25px">
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar" />
-        <RelativeLayout
+        android:fitsSystemWindows="true">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relativeLayout1">
-            <ImageView
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_width="130.0dp"
-                android:layout_height="130.0dp"
-                android:id="@+id/profilePicImageView"
+            android:layout_height="match_parent"
+            android:id="@+id/drawer_layout"
+            android:minWidth="25px"
+            android:minHeight="25px">
+            <include
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/relativeLayout1">
+                <ImageView
+                    android:src="@android:drawable/ic_menu_gallery"
+                    android:layout_width="130.0dp"
+                    android:layout_height="130.0dp"
+                    android:id="@+id/profilePicImageView"
+                    android:layout_marginLeft="15.0dp"
+                    android:clickable="true"
+                    android:layout_marginRight="20.0dp" />
+                <TextView
+                    android:text="[username]"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/profilePicImageView"
+                    android:id="@+id/usernameTextView"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_alignBaseline="@id/profilePicImageView"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="39.0dp"
+                    android:layout_margin="@dimen/abc_action_bar_default_padding_end_material" />
+                <TextView
+                    android:text="[teamname]"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/profilePicImageView"
+                    android:id="@+id/teamNameTextView"
+                    android:layout_below="@id/usernameTextView"
+                    android:layout_marginTop="13.5dp"
+                    android:layout_margin="@dimen/abc_action_bar_default_padding_end_material"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/gridLayout1"
+                android:rowCount="5"
+                android:columnCount="2"
                 android:layout_marginLeft="15.0dp"
-                android:clickable="true"
-                android:layout_marginRight="20.0dp" />
+                android:layout_marginRight="15.0dp"
+                android:layout_marginTop="15.0dp">
+                <TextView
+                    android:text="@string/statistics"
+                    android:id="@+id/statisticsTextView"
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20.0dp" />
+                <TextView
+                    android:text="@string/cells_claimed"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/cellsClaimedLabelTextView"
+                    android:layout_marginTop="10.0dp" />
+            </GridLayout>
             <TextView
-                android:text="[username]"
-                android:layout_width="wrap_content"
+                android:text="[confinium]"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/profilePicImageView"
-                android:id="@+id/usernameTextView"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_alignBaseline="@id/profilePicImageView"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="39.0dp"
-                android:layout_margin="@dimen/abc_action_bar_default_padding_end_material" />
-            <TextView
-                android:text="[teamname]"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/profilePicImageView"
-                android:id="@+id/teamNameTextView"
-                android:layout_below="@id/usernameTextView"
-                android:layout_marginTop="13.5dp"
-                android:layout_margin="@dimen/abc_action_bar_default_padding_end_material"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/gridLayout1"
-            android:rowCount="5"
-            android:columnCount="2"
-            android:layout_marginLeft="15.0dp"
-            android:layout_marginRight="15.0dp"
-            android:layout_marginTop="15.0dp">
-            <TextView
-                android:text="@string/statistics"
-                android:id="@+id/statisticsTextView"
-                android:layout_columnSpan="2"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20.0dp" />
-            <TextView
-                android:text="@string/cells_claimed"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/cellsClaimedLabelTextView"
-                android:layout_marginTop="10.0dp" />
-        </GridLayout>
-        <TextView
-            android:text="[confinium]"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/confiniumTextView"
-            android:padding="@dimen/abc_action_bar_default_padding_end_material"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />
+                android:id="@+id/confiniumTextView"
+                android:padding="@dimen/abc_action_bar_default_padding_end_material"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />
+        </LinearLayout>
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
