--- a/MobileTag/Resources/layout/Settings.axml
+++ b/MobileTag/Resources/layout/Settings.axml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/drawer_layout"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:fitsSystemWindows="true">
- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:orientation="vertical"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/drawer_layout"
-      android:minWidth="25px"
-      android:minHeight="25px">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
     <LinearLayout
         android:orientation="vertical"
-        android:minWidth="25px"
-        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout1">
-        <CheckBox
-            android:text="Light Map Style"
+        android:layout_height="match_parent"
+        android:id="@+id/drawer_layout"
+        android:minWidth="25px"
+        android:minHeight="25px">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:minWidth="25px"
+            android:minHeight="25px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/CheckBox_MapStyleLight" />
+            android:id="@+id/linearLayout1">
+            <CheckBox
+                android:text="Light Map Style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/CheckBox_MapStyleLight" />
+        </LinearLayout>
+        <Button
+            android:text="Save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Save_Button"
+            android:foregroundTint="#fff0ffff" />
     </LinearLayout>
-    <Button
-        android:text="Save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Save_Button"
-        android:foregroundTint="#fff0ffff" />
-  </LinearLayout>
-  <android.support.design.widget.NavigationView
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:layout_gravity="start"
-      android:id="@+id/nav_view"
-      app:headerLayout="@layout/drawer_header"
-      app:menu="@menu/nav_menu" />
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:id="@+id/nav_view"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/nav_menu" />
 </android.support.v4.widget.DrawerLayout>
