--- a/MobileTag/Resources/layout/SimpleFieldDialog.axml
+++ b/MobileTag/Resources/layout/SimpleFieldDialog.axml
@@ -12,5 +12,6 @@
         android:id="@+id/simpleField"
         android:layout_marginRight="2.5dp"
         android:layout_gravity="center"
-        android:hint="hint" />
+        android:hint="hint"
+        android:singleLine="true" />
 </LinearLayout>
